--- a/app/src/main/res/layout/menu1.xml
+++ b/app/src/main/res/layout/menu1.xml
@@ -7,20 +7,21 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="165dp"
+        android:layout_width="175dp"
         android:layout_height="75dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="120dp"
+        android:backgroundTint="#373636"
         android:text="Pressure pump"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="165dp"
+        android:layout_width="175dp"
         android:layout_height="75dp"
         android:layout_marginTop="60dp"
+        android:backgroundTint="#373636"
         android:text="pressure gauge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,9 +29,11 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="165dp"
+        android:layout_width="175dp"
         android:layout_height="75dp"
         android:layout_marginTop="60dp"
+        android:backgroundTint="#373636"
+        android:backgroundTintMode="#373636"
         android:text="hand tool wrench"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +45,15 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="25dp"
         android:text="Selecione o equipamento:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
